filesrc: rearrange sys/stat.h inclusion point for MinGW

gstplugin.h used to include this for us, but doesn't any longer.

https://bugzilla.gnome.org/show_bug.cgi?id=675171